@@ -56,7 +56,7 @@ types also have their own documentation available, such as
 detail as the structure is descended. The top level directory contains the scripts
 and tools required to build the entire Slurm system. It also contains a variety
 of subdirectories for each type of file.</p>
-<p>General build tools/files include: <b>acinclude.m4</b>, <b>autogen.sh</b>,
+<p>General build tools/files include: <b>acinclude.m4</b>,
 <b>configure.ac</b>, <b>Makefile.am</b>, <b>Make-rpm.mk</b>, <b>META</b>, <b>README</b>,
 <b>slurm.spec.in</b>, and the contents of the <b>auxdir</b> directory. <span class="commandline">autoconf</span>
 and <span class="commandline">make</span> commands are used to build and install
@@ -172,15 +172,15 @@ with our work.</p>
 <a id="Adding-New-Modules"></a>
 <h2>Adding New Modules</h2>
 <p>Add the new file name to the Makefile.am file in the appropriate directory.
-Then execute autogen.sh (at the top level of the Slurm source directory).
+Then execute autoreconf (at the top level of the Slurm source directory).
 Note that a relatively current version of auotmake is required.
-The autogen.sh program will build Makefile.in files from the Makefile.am files.
+The autoreconf program will build Makefile.in files from the Makefile.am files.
 If any new files need to be installed, update the slurm.spec file to identify
 the RPM in which the new files should be placed</p>
 
 <p>If new directories need to be added, add to the configure.ac file the path
 to the Makefile to be built in the new directory. In summary:<br>
-<u>autogen.sh</u> translates <u>.am</u> files into <u>.in</u> files<br>
+<u>autoreconf</u> translates <u>.am</u> files into <u>.in</u> files<br>
 <u>configure</u> tranlates <u>.in</u> files, adding paths and version numbers.</p>
 
 <a id="Compiling"></a>
@@ -224,7 +224,7 @@ See <b>testsuite/expect/README</b> for more information.</p>
 <p>If you are adding files and directories to Slurm, it will be necessary to
 re-build configuration files before executing the <b>configure</b> command.
 Update <b>Makefile.am</b> files as needed then execute
-<b>autogen.sh</b> before executing <b>configure</b>.
+<b>autoreconf</b> before executing <b>configure</b>.
 
 <a id="Tricks-of-the-Trade"></a>
 <h2>Tricks of the Trade</h2>
@@ -326,6 +326,6 @@ systemctl start/stop/restart slurmd@nodeXYZ
 
 </p>
 
-<p style="text-align:center;">Last modified 7 January 2019</p>
+<p style="text-align:center;">Last modified 27 Februrary 2019</p>
 
 <!--#include virtual="footer.txt"-->
